recursion.lessons.recursion.tree.Tree.scala.error
Tree:15: error: ';' expected but ',' found.
Pour dessiner un arbre à quatre étages, il faut dessiner un tronc de la taille indiquée,
                                      ^Tree:17: error: ';' expected but symbol literal found.
l'angle indiqué, faire un autre arbre à 3 étages, puis revenir à sa position initiale. N'oubliez 
 ^Tree:19: error: ';' expected but ',' found.
Si le tronc d'un arbre mesure length à l'étage N, il mesure shrink*length à l'étage N+1. 
                                                ^